# DX12GameEngine

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  ISSUES.md  README.md
.claude/: CLAUDE.md
.claude/guides/: architecture.md  coding-style.md  documentation.md  dx12.md  optimization.md  workflow.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  optimization.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
Benchmarks/: CMakeLists.txt  Main.cpp  README.md
Docs/: DX12_Core_Concepts.md  README.md  ROADMAP.md
Docs/Analysis/: README.md
Docs/Analysis/Performance/Results/: README.md
Docs/Concepts/: README.md
Docs/Concepts/DX12/: CommandAllocator.md  CommandList.md  CommandQueue.md  ConstantBuffer.md  DebugLayer.md  MemoryHeaps.md  README.md  SwapChain.md
Docs/Concepts/DX12/Commands/: CommandAllocator.md  CommandList.md  CommandQueue.md  README.md
Docs/Concepts/DX12/Debugging/: DebugLayer.md
Docs/Concepts/DX12/Display/: SwapChain.md
Docs/Concepts/DX12/Pipeline/: PipelineStateObject.md
Docs/Concepts/DX12/Resources/: ConstantBuffer.md  MemoryHeaps.md  ResourceBarriers.md
Docs/Concepts/Platform/: InputHandling.md  MessageLoop.md  README.md  WindowSystem.md
Docs/Concepts/Platform/Windows/: InputHandling.md  MessageLoop.md  README.md  WindowSystem.md
Docs/Concepts/Rendering/: GraphicsPipeline.md  README.md  ResourceBinding.md  Shaders.md  VertexProcessing.md  WaterSimulation.md
Docs/Concepts/Rendering/Pipeline/: GraphicsPipeline.md  README.md  VertexProcessing.md
Docs/Concepts/Rendering/Shaders/: README.md  ResourceBinding.md
Docs/Concepts/Rendering/Techniques/: README.md
Docs/Structure/: README.md
Docs/Structure/Project/: DirectoryLayout.md
Docs/Templates/: AnalysisTemplate.md  ConceptTemplate.md  StructureTemplate.md  UsageTemplate.md
Docs/Usage/: README.md
Docs/Usage/BasicTasks/: UsingConstantBuffer.md
Samples/: CMakeLists.txt
Samples/Basic/: Main.cpp
Shaders/: Triangle.hlsl
Source/: CMakeLists.txt
Source/Core/: BuildConfig.h  Engine.cpp  Engine.h
Source/Graphics/: CommandListManager.cpp  CommandListManager.h  CommandQueue.cpp  CommandQueue.h  DescriptorHeap.cpp  DescriptorHeap.h  DescriptorHeapManager.cpp  DescriptorHeapManager.h  Device.cpp  Device.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h
Source/Platform/: Window.cpp  Window.h
Source/Utils/: Logger.cpp  Logger.h
